# pacutil

./: Cargo.toml  readme.md
src/: cli.rs  db.rs  main.rs  ser.rs  util.rs  wrapper.rs
src/db/: connection.rs  field.rs  field_type_extractor.rs  table.rs  util.rs
src/util/: json_manipulator.rs
src/wrapper/: info.rs  install.rs  repo.rs
