[package]
name = "pacutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
wildmatch = "2.1"
rusqlite = "^0.27"
lazy_static = "1.4"
serde_rusqlite = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"